--- a/package.json
+++ b/package.json
@@ -18,9 +18,20 @@
   },
   "homepage": "https://github.com/sora64/phelps-employee-tracker-challenge#readme",
   "dependencies": {
+    "@octokit/auth-basic": "^1.4.8",
+    "@octokit/rest": "^18.12.0",
     "asciiart-logo": "^0.2.6",
+    "chalk": "^5.0.0",
+    "clear": "^0.1.0",
+    "clui": "^0.3.6",
+    "configstore": "^6.0.0",
     "console.table": "^0.10.0",
+    "figlet": "^1.5.2",
     "inquirer": "^8.2.0",
-    "mysql2": "^2.3.3"
+    "lodash": "^4.17.21",
+    "minimist": "^1.2.5",
+    "mysql2": "^2.3.3",
+    "simple-git": "^3.2.6",
+    "touch": "^3.1.0"
   }
 }
